switch URL -> URI
URL throws an exception about an unknown scheme "gemini".  I don't
intend to write a URLConnectionHandler class for gemini, I'm happy
with my Response class, so switch to a URI that doesn't have that
trouble.

After all, that constructor is there only because it's handy to do

	new Response("gemini://localhost/index.gmi")